--- a/app/customer/generate_exit.html
+++ b/app/customer/generate_exit.html
@@ -40,66 +40,64 @@
   <p>下のQRコードを読み取って、退店処理を完了してください。</p>
   <canvas id="qrcode"></canvas>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+    authDomain: "qr-visitor-log.firebaseapp.com",
+    projectId: "qr-visitor-log",
+    storageBucket: "qr-visitor-log.appspot.com",
+    messagingSenderId: "304250341939",
+    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
+  async function generateToken(length = 12) {
+    const chars = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+    let result = "";
+    for (let i = 0; i < length; i++) {
+      result += chars.charAt(Math.floor(Math.random() * chars.length));
+    }
+    return result;
+  }
+
+  (async () => {
     const table = new URLSearchParams(location.search).get("table");
+    const token = await generateToken();
+    const url = `https://qr-webpage.vercel.app/app/register/exit.html?table=${table}&token=${token}`;
+    const expiresAt = new Date(Date.now() + 30 * 60 * 1000).toISOString(); // 30分有効
 
-    async function generateToken(length = 12) {
-      const chars = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
-      let result = "";
-      for (let i = 0; i < length; i++) {
-        result += chars.charAt(Math.floor(Math.random() * chars.length));
+    // Firestore に保存
+    await db.collection("exit_queue").doc(token).set({
+      token,
+      table,
+      status: "waiting",
+      expiresAt
+    });
+
+    // QRコード生成
+    QRCode.toCanvas(document.getElementById("qrcode"), url, (err) => {
+      if (err) console.error(err);
+    });
+
+    // ディスプレイ側を「退店待ち」にする
+    await db.collection("display_queue").doc(`table_${table}`).set({
+      table,
+      url,
+      status: "exit_waiting",
+      expiresAt
+    });
+
+    // ✅ display_queue のステータスを監視して「scanned」なら画面を戻す
+    const docRef = db.collection("display_queue").doc(`table_${table}`);
+    docRef.onSnapshot((doc) => {
+      const data = doc.data();
+      if (data && data.status === "scanned") {
+        window.location.href = `display.html?table=${table}`;
       }
-      return result;
-    }
+    });
+  })();
+</script>
 
-    (async () => {
-      const token = await generateToken();
-      const url = `https://qr-webpage.vercel.app/app/register/exit.html?table=${table}&token=${token}`;
-      const expiresAt = new Date(Date.now() + 30 * 60 * 1000).toISOString(); // 30分有効
-
-      // Firestore に保存
-      await db.collection("exit_queue").doc(token).set({
-        token,
-        table,
-        status: "waiting",
-        expiresAt
-      });
-
-      // QRコード生成
-      QRCode.toCanvas(document.getElementById("qrcode"), url, (err) => {
-        if (err) console.error(err);
-      });
-
-      // ディスプレイ側を「退店待ち」にする
-      await db.collection("display_queue").doc(`table_${table}`).set({
-        table,
-        url,
-        status: "exit_waiting",
-        expiresAt
-      });
-      const table = new URLSearchParams(location.search).get("table");
-  const docRef = db.collection("display_queue").doc(`table_${table}`);
-
-  docRef.onSnapshot((doc) => {
-    const data = doc.data();
-    if (data && data.status === "scanned") {
-      // ✅ 遷移して display.html に戻る
-      window.location.href = `display.html?table=${table}`;
-    }
-  });
-          })();
-
-  </script>
 </body>
 </html>
