--- a/guistexit.html
+++ b/guistexit.html
@@ -2,11 +2,33 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>入店記録</title>
+  <title>退店記録</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+  import {
+    getFirestore, collection, addDoc, query, where, getDocs, setDoc, doc, getDoc, deleteDoc, updateDoc
+  } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+    authDomain: "qr-visitor-log.firebaseapp.com",
+    projectId: "qr-visitor-log",
+    storageBucket: "qr-visitor-log.appspot.com",
+    messagingSenderId: "304250341939",
+    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  window.addEventListener("DOMContentLoaded", async () => {
+    const params = new URLSearchParams(window.location.search);
+  });
+</script>
+
 
   <style>
     body {
@@ -66,74 +88,47 @@
       color: #555;
     }
 
-    .welcome-img {
-      display: none;
-      width: 140px;
-      height: auto;
-      margin-bottom: 10px;
-      animation: fade-slide 1s ease-in-out;
-    }
-
-    .loader .txt {
-      font-size: 28px;
-      font-weight: bold;
-      color: #2c3e50;
-      display: none;
-      animation: fade-slide 1s ease-in-out;
-    }
-
-    @keyframes fade-slide {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
     .main-content {
       display: none;
       height: 100vh;
+      width: 100vw;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+    }
+
+    .main-content img {
+      max-width: 100%;
+      max-height: 60%;
+      animation: fade-in 1s ease-in-out;
+    }
+
+    .message {
+      margin-top: 20px;
+      font-size: 22px;
       text-align: center;
-      position: relative;
+      color: #2c3e50;
+      animation: fade-in 1s ease-in-out;
     }
 
-    .container {
-      background-color: rgba(255, 255, 255, 0.85);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-      animation: fade-zoom-in 0.8s ease-in-out;
+    .message small {
+      display: block;
+      margin-top: 5px;
+      font-size: 16px;
+      color: #555;
     }
 
-    .icon {
-      font-size: 64px;
-      margin-bottom: 20px;
-      animation: bounce 1.5s infinite ease-in-out;
-    }
-
-    h1 {
-      font-size: 28px;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 18px;
-    }
-
-    @keyframes fade-zoom-in {
-      from { opacity: 0; transform: scale(0.9); }
+    @keyframes fade-in {
+      from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
-    }
-
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
     }
   </style>
 </head>
 <body>
 
-  <!-- ローディング -->
+  <!-- 🔄 ローディング画面 -->
   <div class="loader" id="loader03">
     <div class="loading-wrapper" id="loadingWrapper">
       <div class="loading-text" id="loadingLabel">Now Loading...</div>
@@ -141,66 +136,37 @@
         <div class="loading-fill"></div>
       </div>
     </div>
-    <img src="welcome.png" alt="店員" class="welcome-img" id="welcomeImg" />
-    <p class="txt" id="welcomeText">いらっしゃいませ！<br>　　Welcome!</p>
   </div>
 
-  <!-- メイン -->
+  <!-- ✅ ローディング後の表示 -->
   <div class="main-content" id="main-content">
-    <div class="container">
-      <div class="icon">🛍️</div>
-      <h1>ご来店ありがとうございます！</h1>
-      <p>入店が記録されました。</p>
-      <p>Thank you for visiting our store!</p>
-      <p>Your entry has been recorded.</p>
+    <img src="exit.png" alt="退店画像">
+    <div class="message">
+      レジでお支払いください
+      <small>Please proceed to checkout.</small>
+    </div>
+     <div class="coupon-button">
+      <button id="show-coupon">🎁 クーポンを受け取る</button>
     </div>
   </div>
 
-  <!-- アニメーション制御 -->
+  <!-- jQuery アニメーション制御 -->
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+    $(document).ready(function () {
+      setTimeout(() => {
+        $('#loadingLabel').text("Completion!");
+      }, 3100);
 
-    async function processEntry() {
+      setTimeout(() => {
+        $('#loadingWrapper').fadeOut(400);
+      }, 3600);
 
-          // ローディング表示開始
-          $(document).ready(function () {
-            setTimeout(() => {
-              $('#loadingLabel').text("Completion!");
-            }, 3100);
-
-            setTimeout(() => {
-              $('#loadingWrapper').fadeOut(400);
-            }, 3600);
-
-            setTimeout(() => {
-              $('#welcomeImg').fadeIn(600);
-              $('#welcomeText').fadeIn(600);
-            }, 4200);
-
-            setTimeout(() => {
-              $('#loader03').fadeOut(600, function () {
-                $('#main-content').fadeIn(600);
-              });
-            }, 6000);
-          });
-        }
-      } catch (e) {
-        console.error("Error processing QR:", e);
-        location.href = "error.html";
-      }
-
-    }
-
-    window.onload = processEntry;
+      setTimeout(() => {
+        $('#loader03').fadeOut(600, function () {
+          $('#main-content').fadeIn(600);
+        });
+      }, 4800);
+    });
   </script>
 
 </body>
