--- a/practice.html
+++ b/practice.html
@@ -8,7 +8,6 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -18,39 +17,29 @@
       color: #2c3e50;
       overflow-x: hidden;
     }
-
     header {
       background-color: #2c3e50;
       color: white;
     }
-
     .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
     }
-
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
     }
-
     .header-links {
       display: flex;
       gap: 20px;
     }
-
     .header-links a {
       color: white;
       text-decoration: none;
       font-weight: 500;
     }
-
-    .header-links a:hover {
-      text-decoration: underline;
-    }
-
     .menu-button {
       position: absolute;
       left: 20px;
@@ -60,7 +49,6 @@
       cursor: pointer;
       z-index: 1001;
     }
-
     .menu-button span {
       display: block;
       height: 4px;
@@ -68,7 +56,6 @@
       margin: 5px 0;
       transition: 0.4s;
     }
-
     .drawer {
       position: fixed;
       top: 0;
@@ -81,11 +68,9 @@
       z-index: 1000;
       padding-top: 60px;
     }
-
     .drawer.open {
       left: 0;
     }
-
     .drawer a {
       display: block;
       padding: 15px 20px;
@@ -94,29 +79,21 @@
       font-weight: bold;
       border-bottom: 1px solid #2c3e50;
     }
-
-    .drawer a:hover {
-      background-color: #2c3e50;
-    }
-
     main {
       max-width: 1000px;
       margin: 0 auto;
       padding: 30px 20px;
     }
-
     h2 {
       margin-top: 40px;
       margin-bottom: 10px;
       border-bottom: 2px solid #2c3e50;
       padding-bottom: 5px;
     }
-
     label, select, button {
       font-size: 1.1em;
       margin: 10px;
     }
-
     button {
       padding: 8px 16px;
       border: none;
@@ -125,53 +102,52 @@
       color: white;
       cursor: pointer;
     }
-
     button:hover {
       background-color: #2980b9;
     }
-
     #contentWrap {
       display: flex;
       gap: 30px;
       flex-wrap: wrap;
     }
-
     #printArea {
       width: 58mm;
+      height: 90mm;
       text-align: center;
       font-family: sans-serif;
       padding: 5mm;
       border: 1px dashed #ccc;
       background: white;
+      box-sizing: border-box;
     }
-
     #printArea canvas {
       width: 100%;
       height: auto;
     }
-
     #historyWrap {
       flex: 1;
       min-width: 300px;
     }
-
-    #historyList {
+    #historyList, #exitHistoryList {
       margin-top: 10px;
       background-color: #f8f9fa;
       border-radius: 8px;
       padding: 10px;
+      max-height: 300px;
+      overflow-y: auto;
     }
-
     .history-item {
       padding: 8px;
       border-bottom: 1px solid #ccc;
       cursor: pointer;
     }
-
-    .history-item:hover {
+    .history-item.expired {
       background-color: #e0e0e0;
+      color: #888;
     }
-
+    .history-item:hover {
+      background-color: #d0e7ff;
+    }
     @media print {
       body * {
         visibility: hidden;
@@ -181,101 +157,11 @@
       }
     }
   </style>
-
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
-    const historyItems = [];
-
-    async function generateQR() {
-      const table = document.getElementById("tableNum").value;
-      if (!table || isNaN(table)) {
-        alert("テーブル番号を入力してください");
-        return;
-      }
-
-      const token = crypto.randomUUID();
-      const expiresAt = new Date(Date.now() + 24 * 60 * 60 * 1000);
-      const timestamp = new Date();
-      const url = `https://qr-webpage.vercel.app/app/register/enter.html?table=${table}&token=${token}`;
-
-      await db.collection("qr_tokens").doc(token).set({
-        table: table,
-        token: token,
-        expiresAt: expiresAt.toISOString(),
-        used: false,
-        createdAt: timestamp.toISOString()
-      });
-
-      const entry = { table, url, timestamp, expiresAt };
-      renderQRCode(entry);
-      updateHistory(entry);
-    }
-
-    function renderQRCode(entry) {
-      document.getElementById("tableLabel").textContent = `テーブル番号：${entry.table}`;
-      QRCode.toCanvas(document.getElementById("qrcode"), entry.url, function (error) {
-        if (error) {
-          console.error(error);
-          alert("QRコード表示に失敗しました");
-        }
-      });
-    }
-
-    function updateHistory(entry) {
-      historyItems.unshift(entry);
-      if (historyItems.length > 10) {
-        historyItems.pop();
-      }
-      const container = document.getElementById("historyList");
-      container.innerHTML = "";
-      historyItems.forEach((item, idx) => {
-        const div = document.createElement("div");
-        div.className = "history-item";
-        div.innerHTML = `
-          <strong>テーブル ${item.table}</strong><br>
-          発行: ${item.timestamp.toLocaleString()}<br>
-          有効期限: ${item.expiresAt.toLocaleString()}
-        `;
-        div.onclick = () => renderQRCode(item);
-        container.appendChild(div);
-      });
-    }
-
-    window.onload = () => {
-      const menuButton = document.querySelector(".menu-button");
-      const drawer = document.querySelector(".drawer");
-      menuButton.addEventListener("click", () => {
-        drawer.classList.toggle("open");
-      });
-
-      const tableSelect = document.getElementById("tableNum");
-      for (let i = 1; i <= 14; i++) {
-        const option = document.createElement("option");
-        option.value = i;
-        option.textContent = `テーブル ${i}`;
-        tableSelect.appendChild(option);
-      }
-    };
-  </script>
 </head>
 <body>
-
   <header>
     <div class="menu-button">
-      <span></span>
-      <span></span>
-      <span></span>
+      <span></span><span></span><span></span>
     </div>
     <div class="header-bar">
       <div class="header-title">　　　　　店内管理システム</div>
@@ -288,7 +174,6 @@
       <a href="table.html">テーブル管理</a>
       <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">順番待ち管理</a>
-      <a href="/QR/qrcode.html">QRコード一覧</a>
       <a href="generate.html">QRコード生成</a>
     </div>
   </header>
@@ -302,19 +187,210 @@
   </label>
   <button onclick="generateQR()">生成</button>
   <button onclick="window.print()">印刷する</button>
+  <button onclick="sendToDisplay()">送信する</button>
 
   <div id="contentWrap">
     <div id="printArea">
       <p id="tableLabel">テーブル番号：</p>
       <canvas id="qrcode"></canvas>
     </div>
-
     <div id="historyWrap">
       <h3>生成履歴（最大10件）</h3>
       <div id="historyList"></div>
     </div>
   </div>
+
+  <!-- ▼ 退店QRコード生成エリア -->
+  <h2>QRコード生成（退店）</h2>
+  <label>テーブル番号:
+    <select id="exitTableNum">
+      <option value="">選択してください</option>
+    </select>
+  </label>
+  <button onclick="generateExitQR()">生成</button>
+  <button onclick="window.print()">印刷する</button>
+  <button onclick="sendExitToDisplay()">送信する</button>
+
+  <div id="contentWrap">
+    <div id="printArea">
+      <p id="exitTableLabel">テーブル番号：</p>
+      <canvas id="exitqrcode"></canvas>
+    </div>
+    <div id="historyWrap">
+      <h3>退店QRコード履歴（最大10件）</h3>
+      <div id="exitHistoryList"></div>
+    </div>
+  </div>
 </main>
 
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+    authDomain: "qr-visitor-log.firebaseapp.com",
+    projectId: "qr-visitor-log",
+    storageBucket: "qr-visitor-log.appspot.com",
+    messagingSenderId: "304250341939",
+    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  const historyItems = [];
+  let lastGenerated = null;
+
+  async function generateQR() {
+    const table = document.getElementById("tableNum").value;
+    if (!table || isNaN(table)) {
+      alert("テーブル番号を入力してください");
+      return;
+    }
+    const token = crypto.randomUUID();
+    const expiresAt = new Date(Date.now() + 24 * 60 * 60 * 1000);
+    const timestamp = new Date();
+    const url = `https://qr-webpage.vercel.app/app/register/enter.html?table=${table}&token=${token}`;
+    await db.collection("qr_tokens").doc(token).set({
+      table, token,
+      expiresAt: expiresAt.toISOString(),
+      used: false,
+      createdAt: timestamp.toISOString()
+    });
+    const entry = { table, url, timestamp, expiresAt };
+    lastGenerated = entry;
+    renderQRCode(entry);
+    updateHistory(entry);
+  }
+
+  function renderQRCode(entry) {
+    document.getElementById("tableLabel").textContent = `テーブル番号：${entry.table}`;
+    QRCode.toCanvas(document.getElementById("qrcode"), entry.url, function (error) {
+      if (error) {
+        console.error(error);
+        alert("QRコード表示に失敗しました");
+      }
+    });
+  }
+
+  function updateHistory(entry) {
+    historyItems.unshift(entry);
+    if (historyItems.length > 10) historyItems.pop();
+    const container = document.getElementById("historyList");
+    container.innerHTML = "";
+    const now = new Date();
+    historyItems.forEach((item) => {
+      const isExpired = new Date(item.expiresAt) < now;
+      const div = document.createElement("div");
+      div.className = "history-item" + (isExpired ? " expired" : "");
+      div.innerHTML = `<strong>テーブル ${item.table}</strong><br>
+        発行: ${item.timestamp.toLocaleString()}<br>
+        有効期限: ${new Date(item.expiresAt).toLocaleString()}`;
+      div.onclick = () => renderQRCode(item);
+      container.appendChild(div);
+    });
+  }
+
+  async function sendToDisplay() {
+    if (!lastGenerated) {
+      alert("QRコードがまだ生成されていません");
+      return;
+    }
+    await db.collection("display_queue").doc(`table_${lastGenerated.table}`).set({
+      table: lastGenerated.table,
+      url: lastGenerated.url,
+      expiresAt: lastGenerated.expiresAt.toISOString(),
+      status: "waiting",
+      updatedAt: new Date().toISOString()
+    });
+    alert(`テーブル${lastGenerated.table}のディスプレイに送信しました`);
+  }
+
+  // ▼ 退店QRコード処理
+  const exitHistoryItems = [];
+  let lastExitGenerated = null;
+
+  async function generateExitQR() {
+    const table = document.getElementById("exitTableNum").value;
+    if (!table || isNaN(table)) {
+      alert("テーブル番号を入力してください");
+      return;
+    }
+    const token = crypto.randomUUID();
+    const expiresAt = new Date(Date.now() + 30 * 60 * 1000);
+    const timestamp = new Date();
+    const url = `https://qr-webpage.vercel.app/app/register/exit.html?table=${table}&token=${token}`;
+    await db.collection("exit_queue").doc(token).set({
+      table, token, status: "waiting",
+      expiresAt: expiresAt.toISOString(),
+      createdAt: timestamp.toISOString()
+    });
+    lastExitGenerated = { table, url, timestamp, expiresAt };
+    renderExitQRCode(lastExitGenerated);
+    updateExitHistory(lastExitGenerated);
+  }
+
+  function renderExitQRCode(entry) {
+    document.getElementById("exitTableLabel").textContent = `テーブル番号：${entry.table}`;
+    QRCode.toCanvas(document.getElementById("exitqrcode"), entry.url, function (error) {
+      if (error) {
+        console.error(error);
+        alert("QRコード表示に失敗しました");
+      }
+    });
+  }
+
+  function updateExitHistory(entry) {
+    exitHistoryItems.unshift(entry);
+    if (exitHistoryItems.length > 10) exitHistoryItems.pop();
+    const container = document.getElementById("exitHistoryList");
+    container.innerHTML = "";
+    const now = new Date();
+    exitHistoryItems.forEach((item) => {
+      const isExpired = new Date(item.expiresAt) < now;
+      const div = document.createElement("div");
+      div.className = "history-item" + (isExpired ? " expired" : "");
+      div.innerHTML = `<strong>テーブル ${item.table}</strong><br>
+        発行: ${item.timestamp.toLocaleString()}<br>
+        有効期限: ${new Date(item.expiresAt).toLocaleString()}`;
+      div.onclick = () => renderExitQRCode(item);
+      container.appendChild(div);
+    });
+  }
+
+  async function sendExitToDisplay() {
+    if (!lastExitGenerated) {
+      alert("QRコードがまだ生成されていません");
+      return;
+    }
+    await db.collection("display_queue").doc(`table_${lastExitGenerated.table}`).set({
+      table: lastExitGenerated.table,
+      url: lastExitGenerated.url,
+      expiresAt: lastExitGenerated.expiresAt.toISOString(),
+      status: "exit_waiting",
+      updatedAt: new Date().toISOString()
+    });
+    alert(`テーブル${lastExitGenerated.table}のディスプレイに退店用QRを送信しました`);
+  }
+
+  // 初期化
+  window.onload = () => {
+    const menuButton = document.querySelector(".menu-button");
+    const drawer = document.querySelector(".drawer");
+    menuButton.addEventListener("click", () => drawer.classList.toggle("open"));
+
+    const tableSelect = document.getElementById("tableNum");
+    const exitTableSelect = document.getElementById("exitTableNum");
+    for (let i = 1; i <= 14; i++) {
+      const option1 = document.createElement("option");
+      option1.value = i;
+      option1.textContent = `テーブル ${i}`;
+      tableSelect.appendChild(option1);
+
+      const option2 = document.createElement("option");
+      option2.value = i;
+      option2.textContent = `テーブル ${i}`;
+      exitTableSelect.appendChild(option2);
+    }
+  };
+</script>
 </body>
 </html>
