--- a/app/customer/exit_display.html
+++ b/app/customer/exit_display.html
@@ -135,7 +135,7 @@
         await docRef.delete();
 
         setTimeout(() => {
-          window.location.href = `menu.html?table=${table}`;
+          window.location.href = `display.html?table=${table}`;
         }, 3000);
       }
     });
