--- a/practice.html
+++ b/practice.html
@@ -325,7 +325,7 @@
     }
         
 
-if (data.status === "waiting"|| status === "waiting2") {
+if (data.status === "waiting2") {
   const btnEnter = document.createElement("button");
   btnEnter.className = "btn-enter";
   btnEnter.textContent = "入店通知";
