--- a/practice.html
+++ b/practice.html
@@ -15,7 +15,7 @@
 
   // グローバル関数として定義（どこからでも呼べるように）
   function sendEmail(to_email) {
-    emailjs.send("service_0bg0xsl", "template_lr90jx9", {
+    emailjs.send("service_0bg0xsl", "template_wkjus5o", {
       to_email: to_email,
       subject: "順番が近づいてきました！",
       message: "お客様の順番が近づいてきました。店前にお並びください。"
