--- a/practice.html
+++ b/practice.html
@@ -25,18 +25,17 @@
       alert("メール送信失敗: " + error.text);
     });
   }
-
-    function sendEmail2(to_email2) {
-    emailjs.send("service_0bg0xsl", "template_lr90jx9", {
-      to_email: to_email,
-      subject: "順番が来ました！",
-      message: "お客様の順番になりました。店内へご案内できます。"
-    }).then(() => {
-      alert("メールを送信しました！");
-    }).catch((error) => {
-      alert("メール送信失敗: " + error.text);
-    });
-  }
+  function sendEmail2(to_email) {
+  emailjs.send("service_0bg0xsl", "template_lr90jx9", {
+    to_email: to_email,
+    subject: "順番が来ました！",
+    message: "お客様の順番になりました。店内へご案内できます。"
+  }).then(() => {
+    alert("入店通知メールを送信しました！");
+  }).catch((error) => {
+    alert("メール送信失敗: " + error.text);
+  });
+}
 </script>
 
   <script>
@@ -318,42 +317,33 @@
 
         const btnGroup = item.querySelector(".btn-group");
 
-        if (data.status === "waiting") {
-          const btnEnter = document.createElement("button");
-          btnEnter.className = "btn-enter";
-          btnEnter.textContent = "入店通知";
-          btnEnter.onclick = () => {
-              db.collection("queue").doc(doc.id).update({
-                status: "waiting2",
-                enteredAt: new Date().toISOString()
-              });
+        // waiting のとき → 入店案内（店前に並んでください）
+if (data.status === "waiting") {
+  const btnEnter = document.createElement("button");
+  btnEnter.className = "btn-enter";
+  btnEnter.textContent = "入店案内";
+  btnEnter.onclick = () => {
+    db.collection("queue").doc(doc.id).update({
+      status: "waiting2",
+      notifiedAt: new Date().toISOString()
+    });
+    if (data.email) sendEmail(data.email); // ← 店前に並んでください
+  };
+  btnGroup.appendChild(btnEnter);
+}
 
-        const email = data.email;
-        if (email) {
-          sendEmail(email); // ← この関数が now defined globally
-        }
-      };
-      btnGroup.appendChild(btnEnter);
-    }
-        
-
+// waiting2 のとき → 入店通知（店内に来てください）
 if (data.status === "waiting2") {
   const btnEnter2 = document.createElement("button");
   btnEnter2.className = "btn-enter";
-  btnEnter2.textContent = "入店案内";
-btnEnter2.onclick = () => {
-  db.collection("queue").doc(doc.id).update({
-    status: "entered",
-    enteredAt: new Date().toISOString()
-  });
-
-  const email2 = data.email2;
-  if (email2) {
-    sendEmail2(email2); // ← この関数が now defined globally
-  }
-};
-
-
+  btnEnter2.textContent = "入店通知";
+  btnEnter2.onclick = () => {
+    db.collection("queue").doc(doc.id).update({
+      status: "entered",
+      enteredAt: new Date().toISOString()
+    });
+    if (data.email) sendEmail2(data.email); // ← 店内に来てください
+  };
   btnGroup.appendChild(btnEnter2);
 }
 
