--- a/practice.html
+++ b/practice.html
@@ -233,7 +233,21 @@
           <th>操作</th>
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody>
+    {% for table in tables %}
+    <tr>
+      <td>{{ table.id }}</td>
+      <td>{{ table.status }}</td>
+      <td>{{ table.start_time }}</td>
+      <td>{{ table.usage_time }}</td>
+      <td>
+        {% if table.status == "使用中" %}
+        <button onclick="forceExit('{{ table.id }}')">強制退出</button>
+        {% endif %}
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
     </table>
   </div>
 
