--- a/app/register/enter.html
+++ b/app/register/enter.html
@@ -169,14 +169,18 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    onSnapshot(query(collection(db, "logs"), where("table", "==", myTableId), orderBy("timestamp", "desc"), limit(1)), snapshot => {
-  snapshot.forEach(doc => {
-    const data = doc.data();
-    if (data.type === "exit") {
-      location.href = "exit.html";
-    }
+    db.collection("logs")
+  .where("table", "==", myTableId)
+  .orderBy("timestamp", "desc")
+  .limit(1)
+  .onSnapshot(snapshot => {
+    snapshot.forEach(doc => {
+      const data = doc.data();
+      if (data.type === "exit") {
+        location.href = "exit.html";
+      }
+    });
   });
-});
 
     async function processEntry() {
       const params = new URLSearchParams(location.search);
@@ -247,5 +251,6 @@
 
 </body>
 </html>
+
 
 
