--- a/app/register/enter.html
+++ b/app/register/enter.html
@@ -169,24 +169,24 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    db.collection("logs")
-  .where("table", "==", myTableId)
-  .orderBy("timestamp", "desc")
-  .limit(1)
-  .onSnapshot(snapshot => {
-    snapshot.forEach(doc => {
-      const data = doc.data();
-      if (data.type === "exit") {
-        location.href = "exit.html";
-      }
-    });
-  });
-
     async function processEntry() {
       const params = new URLSearchParams(location.search);
       const table = params.get("table");
       const token = params.get("token");
       if (!token || !table) return location.href = "error.html";
+
+       db.collection("logs")
+    .where("table", "==", table)   
+    .orderBy("timestamp", "desc")
+    .limit(1)
+    .onSnapshot(snapshot => {
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        if (data.type === "exit") {
+          location.href = "exit.html";
+        }
+      });
+    });
 
       try {
         const docRef = db.collection("qr_tokens").doc(token);
@@ -251,6 +251,7 @@
 
 </body>
 </html>
+
 
 
 
