--- a/app/register/enter.html
+++ b/app/register/enter.html
@@ -233,13 +233,28 @@
       }
 
     }
+
     
+        function watchQueue() {
+          const tableId = params.get("table");
+        db.collection("tables").doc(tableId)
+            .onSnapshot((doc) => {
+    if (!doc.exists) return;
+    const data = doc.data();
+    if (data.status === "vacant") {
+      // 強制退出された場合
+      location.href = "exit.html?table=" + tableId;
+    }
+  });
+        }
+
 
     window.onload = processEntry;
   </script>
 
 </body>
 </html>
+
 
 
 
