--- a/app/register/enter.html
+++ b/app/register/enter.html
@@ -168,6 +168,8 @@
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
+    const tableId = params.get("table");
+
 
     async function processEntry() {
       const params = new URLSearchParams(location.search);
@@ -234,19 +236,17 @@
 
     }
 
-    
-        function watchQueue() {
-          const tableId = params.get("table");
-        db.collection("tables").doc(tableId)
-            .onSnapshot((doc) => {
-    if (!doc.exists) return;
-    const data = doc.data();
-    if (data.status === "vacant") {
-      // 強制退出された場合
-      location.href = "exit.html?table=" + tableId;
-    }
-  });
-        }
+    function watchQueue() {
+  db.collection("tables").doc(table)
+    .onSnapshot((doc) => {
+      if (!doc.exists) return;
+      const data = doc.data();
+      if (data.status === "vacant") {
+        // 強制退出された場合
+        location.href = "exit.html?table=" + table;
+      }
+    });
+}
 
 
     window.onload = processEntry;
@@ -254,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
