--- a/app/register/enter.html
+++ b/app/register/enter.html
@@ -236,17 +236,28 @@
 
     }
 
-    function watchQueue() {
-  db.collection("tables").doc(table)
-    .onSnapshot((doc) => {
-      if (!doc.exists) return;
-      const data = doc.data();
-      if (data.status === "vacant") {
-        // 強制退出された場合
-        location.href = "exit.html?table=" + table;
-      }
-    });
-}
+  const params = new URLSearchParams(location.search);
+  const table = params.get("table");
+
+  if (table) {
+    watchQueue(table);
+  }
+
+  function watchQueue(tableId) {
+    // Firestoreの tables コレクションの特定ドキュメントを監視
+    db.collection("tables").doc(tableId)
+      .onSnapshot((doc) => {
+        if (!doc.exists) return;
+
+        const data = doc.data();
+        if (!data) return;
+
+        // ステータスが exit になったら exit.html に遷移
+        if (data.status === "exit") {
+          location.href = "exit.html?table=" + tableId;
+        }
+      });
+  }
 
 
     window.onload = processEntry;
@@ -254,6 +265,7 @@
 
 </body>
 </html>
+
 
 
 
