--- a/app/register/enter.html
+++ b/app/register/enter.html
@@ -168,13 +168,12 @@
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
-
-    async function processEntry() {
-      const params = new URLSearchParams(location.search);
+    　 const params = new URLSearchParams(location.search);
       const table = params.get("table");
       const token = params.get("token");
       if (!token || !table) return location.href = "error.html";
 
+    async function processEntry() {
 
 
       try {
@@ -235,17 +234,17 @@
     }
 
 
-function watchQueue(tableId) {
-  db.collection("tables").doc(tableId)
-    .onSnapshot((doc) => {
-      if (!doc.exists) return;
-      const data = doc.data();
-      if (!data) return;
-      if (data.status === "exit") {
-        location.href = "exit.html?table=" + tableId;
-      }
-    });
-}
+    function watchQueue(tableId) {
+      db.collection("tables").doc(tableId).onSnapshot(doc => {
+        if (!doc.exists) return;
+        const data = doc.data();
+        if (!data) return;
+
+        if (data.status === "exit") {
+          location.href = "exit.html?table=" + tableId;
+        }
+      });
+    }
 
 
     window.onload = processEntry;
@@ -253,6 +252,7 @@ function watchQueue(tableId) {
 
 </body>
 </html>
+
 
 
 
